added footer subscribe form

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
          <a class="logo" href="./index.html">
           <span class="logo-part1">Web</span
           ><span class="logo-part2">Studio</span>
-        </a>
+         </a>
         <!-- Address -->
         <address>
           <ul class="address-list">
@@ -454,10 +454,10 @@
         </address>
       </div>
       <div class="footer-socials">
-                <h1 class="footer-h1">
+                <p>
           присоединяйтесь
-        </h1>
-                      <ul class="footer-social-links">
+        </p>
+                        <ul class="footer-social-links">
                   <li>
                     <a class="footer-social-link" href="">
                       <svg width="20" height="20">
@@ -484,7 +484,19 @@
                   </li>
                 </ul>
       </div>
+      <div class="pre-subscribe-container vertical-container">
+        <p>подпишитесь</p>
+        <form>
+          <label class="subscribe-container">
+            <input class="subscribe-input" type="email" placeholder="Email">
+        <button class="submit-button" type="submit">Подписаться<svg width="24" height="24">
+          <use href="./images/symbol-defs.svg#icon-subscribe">
+        </svg> </button>
+      </input>
+          </label>
+        </form>
       </div>
+    </div>
     </footer>
       <script src="./js/modal.js"></script>
   </body>
