symbols-defs.svg renamed to icons.svg

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <li>
             <a class="contacts-link" href="mailto:info@devstudio.com"
               ><svg class="contact-icon" width="16" height="12">
-              <use href="./images/symbol-defs.svg#icon-mail"/>
+              <use href="./images/icons.svg#icon-mail"/>
             </svg>info@devstudio.com</a
             >
           </li>
           <li>
             <a class="contacts-link" href="tel:+380961111111"
               ><svg class="contact-icon" width="10" height="16">
-              <use href="./images/symbol-defs.svg#icon-phone"/>
+              <use href="./images/icons.svg#icon-phone"/>
             </svg>+38 096 111 11 11</a
             >
           </li>
@@ -79,7 +79,7 @@
               <button class="close-btn" data-modal-close type="button">
 
                   <svg width="18" height="18">
-                  <use href="./images/symbol-defs.svg#icon-close-modal">
+                  <use href="./images/icons.svg#icon-close-modal">
                 </svg>
 
               </button>
@@ -95,7 +95,7 @@
             <li class="qalities-item">
               <div class="qalities-icon-container">
                 <svg class="qalities-icon" width="70" height="70">
-                  <use href="./images/symbol-defs.svg#icon-antenna"/>
+                  <use href="./images/icons.svg#icon-antenna"/>
                 </svg>
               </div>
               <h3>Внимание к деталям</h3>
@@ -107,7 +107,7 @@
             <li class="qalities-item">
               <div class="qalities-icon-container">
                 <svg class="qalities-icon" width="70" height="70">
-              <use href="./images/symbol-defs.svg#icon-clock"/>
+              <use href="./images/icons.svg#icon-clock"/>
             </svg>
               </div>
               <h3>Пунктуальность</h3>
@@ -119,7 +119,7 @@
             <li class="qalities-item">
               <div class="qalities-icon-container">
                 <svg class="qalities-icon" width="70" height="70">
-              <use href="./images/symbol-defs.svg#icon-diagram"/>
+              <use href="./images/icons.svg#icon-diagram"/>
             </svg>
               </div>
               <h3>Планирование</h3>
@@ -131,7 +131,7 @@
             <li class="qalities-item">
               <div class="qalities-icon-container">
                 <svg class="qalities-icon" width="70" height="70">
-              <use href="./images/symbol-defs.svg#icon-astronaut"/>
+              <use href="./images/icons.svg#icon-astronaut"/>
             </svg>
               </div>
               <h3>Современные технологии</h3>
@@ -206,14 +206,14 @@
                     <li>
                       <a class="social-link" href="https://">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-instagram"/>
+                          <use href="./images/icons.svg#icon-instagram"/>
                         </svg></a>
                     </li>
                     <li>
                       <div>
                         <a class="social-link" href="">
                           <svg width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-twitter"/>
+                            <use href="./images/icons.svg#icon-twitter"/>
                           </svg></a>
                       </div>
                     </li>
@@ -221,14 +221,14 @@
                       <div>
                         <a class="social-link" href="">
                           <svg width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-facebook"/>
+                            <use href="./images/icons.svg#icon-facebook"/>
                           </svg></a>
                       </div>
                     </li>
                     <li>
                         <a class="social-link last" href=""> 
                           <svg width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-linkedin"/>
+                            <use href="./images/icons.svg#icon-linkedin"/>
                           </svg></a>
                     </li>
                   </ul>
@@ -248,14 +248,14 @@
                     <li>
                       <a class="social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-instagram"/>
+                          <use href="./images/icons.svg#icon-instagram"/>
                         </svg></a>
                     </li>
                     <li>
                       <div>
                         <a class="social-link" href="">
                           <svg width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-twitter"/>
+                            <use href="./images/icons.svg#icon-twitter"/>
                           </svg></a>
                       </div>
                     </li>
@@ -263,14 +263,14 @@
                       <div>
                         <a class="social-link" href="">
                           <svg width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-facebook"/>
+                            <use href="./images/icons.svg#icon-facebook"/>
                           </svg></a>
                       </div>
                     </li>
                     <li>
                         <a class="social-link last" href=""> 
                           <svg width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-linkedin"/>
+                            <use href="./images/icons.svg#icon-linkedin"/>
                           </svg></a>
                     </li>
                   </ul>
@@ -291,14 +291,14 @@
                   <li>
                     <a class="social-link" href="">
                       <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"/>
+                        <use href="./images/icons.svg#icon-instagram"/>
                        </svg></a>
                   </li>
                   <li>
                     <div>
                       <a class="social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-twitter"/>
+                          <use href="./images/icons.svg#icon-twitter"/>
                         </svg></a>
                     </div>
                   </li>
@@ -306,14 +306,14 @@
                     <div>
                       <a class="social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-facebook"/>
+                          <use href="./images/icons.svg#icon-facebook"/>
                         </svg></a>
                     </div>
                   </li>
                   <li>
                       <a class="social-link last" href=""> 
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-linkedin"/>
+                          <use href="./images/icons.svg#icon-linkedin"/>
                         </svg></a>
                   </li>
                 </ul>
@@ -334,14 +334,14 @@
                   <li>
                     <a class="social-link" href="">
                       <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"/>
+                        <use href="./images/icons.svg#icon-instagram"/>
                        </svg></a>
                   </li>
                   <li>
                     <div>
                       <a class="social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-twitter"/>
+                          <use href="./images/icons.svg#icon-twitter"/>
                         </svg></a>
                     </div>
                   </li>
@@ -349,14 +349,14 @@
                     <div>
                       <a class="social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-facebook"/>
+                          <use href="./images/icons.svg#icon-facebook"/>
                         </svg></a>
                     </div>
                   </li>
                   <li>
                       <a class="social-link last" href=""> 
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-linkedin"/>
+                          <use href="./images/icons.svg#icon-linkedin"/>
                         </svg></a>
                   </li>
                 </ul>
@@ -376,42 +376,42 @@
             <li class="client">
               <a class="client-link" href="">
                   <svg width="106" height="60">
-                    <use href="./images/symbol-defs.svg#icon-Logo1"/>
+                    <use href="./images/icons.svg#icon-Logo1"/>
                   </svg>
               </a>
             </li>
             <li class="client">
               <a class="client-link" href="">
                   <svg width="106" height="60">
-                    <use href="./images/symbol-defs.svg#icon-Logo2"/>
+                    <use href="./images/icons.svg#icon-Logo2"/>
                   </svg>
               </a>
             </li>
             <li class="client">
               <a class="client-link" href="">
                   <svg width="106" height="60">
-                    <use href="./images/symbol-defs.svg#icon-Logo3"/>
+                    <use href="./images/icons.svg#icon-Logo3"/>
                   </svg>
               </a>
             </li>
             <li class="client">
               <a class="client-link" href="">
                   <svg width="106" height="60">
-                    <use href="./images/symbol-defs.svg#icon-Logo4"/>
+                    <use href="./images/icons.svg#icon-Logo4"/>
                   </svg>
               </a>
             </li>
             <li class="client">
               <a class="client-link" href="">
                   <svg width="106" height="60">
-                    <use href="./images/symbol-defs.svg#icon-Logo5"/>
+                    <use href="./images/icons.svg#icon-Logo5"/>
                   </svg>
               </a>
             </li>
             <li class="client">
               <a class="client-link last" href="">
                   <svg width="106" height="60">
-                    <use href="./images/symbol-defs.svg#icon-Logo6"/>
+                    <use href="./images/icons.svg#icon-Logo6"/>
                   </svg>
               </a>
             </li>
@@ -461,25 +461,25 @@
                   <li>
                     <a class="footer-social-link" href="">
                       <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"/>
+                        <use href="./images/icons.svg#icon-instagram"/>
                        </svg></a>
                   </li>
                   <li>
                       <a class="footer-social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-twitter"/>
+                          <use href="./images/icons.svg#icon-twitter"/>
                         </svg></a>
                   </li>
                   <li>
                       <a class="footer-social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-facebook"/>
+                          <use href="./images/icons.svg#icon-facebook"/>
                         </svg></a>
                   </li>
                   <li>
                       <a class="footer-social-link last" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-linkedin"/>
+                          <use href="./images/icons.svg#icon-linkedin"/>
                         </svg></a>
                   </li>
                 </ul>
@@ -490,7 +490,7 @@
           <label class="subscribe-container">
             <input class="subscribe-input" type="email" placeholder="Email">
         <button class="submit-button" type="submit">Подписаться<svg width="24" height="24">
-          <use href="./images/symbol-defs.svg#icon-subscribe">
+          <use href="./images/icons.svg#icon-subscribe">
         </svg> </button>
       </input>
           </label>
