--- a/portfolio.html
+++ b/portfolio.html
@@ -249,7 +249,7 @@
          <a class="logo" href="./index.html">
           <span class="logo-part1">Web</span
           ><span class="logo-part2">Studio</span>
-        </a>
+         </a>
         <!-- Address -->
         <address>
           <ul class="address-list">
@@ -276,37 +276,49 @@
         </address>
       </div>
       <div class="footer-socials">
-                <h1 class="footer-h1">
+                <p>
           присоединяйтесь
-        </h1>
-                      <ul class="footer-social-links">
+        </p>
+                        <ul class="footer-social-links">
                   <li>
                     <a class="footer-social-link" href="">
                       <svg width="20" height="20">
-                        <use href="./images/symbol-defs.svg#icon-instagram"/>
+                        <use href="./images/icons.svg#icon-instagram"/>
                        </svg></a>
                   </li>
                   <li>
                       <a class="footer-social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-twitter"/>
+                          <use href="./images/icons.svg#icon-twitter"/>
                         </svg></a>
                   </li>
                   <li>
                       <a class="footer-social-link" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-facebook"/>
+                          <use href="./images/icons.svg#icon-facebook"/>
                         </svg></a>
                   </li>
                   <li>
                       <a class="footer-social-link last" href="">
                         <svg width="20" height="20">
-                          <use href="./images/symbol-defs.svg#icon-linkedin"/>
+                          <use href="./images/icons.svg#icon-linkedin"/>
                         </svg></a>
                   </li>
                 </ul>
       </div>
+      <div class="pre-subscribe-container vertical-container">
+        <p>подпишитесь</p>
+        <form>
+          <label class="subscribe-container">
+            <input class="subscribe-input" type="email" placeholder="Email">
+        <button class="submit-button" type="submit">Подписаться<svg width="24" height="24">
+          <use href="./images/icons.svg#icon-subscribe">
+        </svg> </button>
+      </input>
+          </label>
+        </form>
       </div>
+    </div>
     </footer>
   </body>
 </html>
