--- a/index.html
+++ b/index.html
@@ -64,21 +64,67 @@
       <section class="section hero">
 
         <div class="vertical-container">
-          <h1>
+          <h1 class="hero-h1">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
           <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Repudiandae facere fugiat aliquam quod rerum suscipit assumenda cupiditate architecto,
-                atque facilis.
-              </p>
+              <form class="modal-form">
+                <h1>Оставьте свои данные, мы вам перезвоним</h1>
+                <ul class="modal-label-list">
+                  <li>
+                    <label class="modal-label">
+                      <p>Имя</p>
+                      <svg class="modal-svg" width="18" height="18">
+                        <use href="./images/icons.svg#icon-person-modal" />
+                      </svg>
+                      <input class="modal-input" type="name" name="name"/>
+                    </label>
+                  </li>
+                  <li>
+                    <label class="modal-label">
+                      <p>Телефон</p>
+                      <svg class="modal-svg" width="18" height="18">
+                        <use href="./images/icons.svg#icon-phone-modal" />
+                      </svg>
+                      <input class="modal-input"  type="tel" name="tel"/>
+                    </label>
+                  </li>
+                  <li>
+                    <label class="modal-label">
+                      <p>Почта</p>
+                      <svg class="modal-svg" width="18" height="18">
+                        <use href="./images/icons.svg#icon-email-modal" />
+                      </svg>
+                      <input class="modal-input"  type="email" name="email"/>
+                    </label>
+                  </li>
+                  <li>
+                    <label class="modal-label">
+                      <p>Комментарий</p>
+                      <textarea class="modal-input modal-comment" placeholder="Введите текст"></textarea>
+                    </label>
+                  </li>
+                </ul>
+                <label class="modal-checkbox-label">
+                  <p>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
+                  <input class="checkbox" type="checkbox" name="checkbox">
+                  <svg class="checkbox-modal-svg" width="16" height="15">
+                    <use href="./images/icons.svg#icon-modal-checkbox">
+                  </svg>
+                  <svg class="checkbox-modal-svg checked" width="16" height="15">
+                    <use href="./images/icons.svg#icon-check-modal">
+                  </svg>
+                </label>
+                <button class="submit-button" type="submit">
+                  Отправить
+                </button>
+              </form>
               <button class="close-btn" data-modal-close type="button">
 
-                  <svg width="18" height="18">
+                  <svg class="close-modal-svg" width="18" height="18">
                   <use href="./images/icons.svg#icon-close-modal">
                 </svg>
 
