--- a/index.html
+++ b/index.html
@@ -77,28 +77,34 @@
                   <li>
                     <label class="modal-label">
                       <p>Имя</p>
-                      <svg class="modal-svg" width="18" height="18">
-                        <use href="./images/icons.svg#icon-person-modal" />
-                      </svg>
-                      <input class="modal-input" type="name" name="name"/>
+                      <span>
+                        <input class="modal-input" type="name" name="name"/>
+                        <svg class="modal-svg" width="18" height="18">
+                          <use href="./images/icons.svg#icon-person-modal" />
+                        </svg>
+                      </span>
                     </label>
                   </li>
                   <li>
                     <label class="modal-label">
                       <p>Телефон</p>
-                      <svg class="modal-svg" width="18" height="18">
-                        <use href="./images/icons.svg#icon-phone-modal" />
-                      </svg>
-                      <input class="modal-input"  type="tel" name="tel"/>
+                      <span>
+                        <input class="modal-input"  type="tel" name="tel"/>
+                        <svg class="modal-svg" width="18" height="18">
+                          <use href="./images/icons.svg#icon-phone-modal" />
+                        </svg>
+                      </span>
                     </label>
                   </li>
                   <li>
                     <label class="modal-label">
                       <p>Почта</p>
-                      <svg class="modal-svg" width="18" height="18">
-                        <use href="./images/icons.svg#icon-email-modal" />
-                      </svg>
-                      <input class="modal-input"  type="email" name="email"/>
+                      <span>
+                        <input class="modal-input"  type="email" name="email"/>
+                        <svg class="modal-svg" width="18" height="18">
+                          <use href="./images/icons.svg#icon-email-modal" />
+                        </svg>
+                      </span>
                     </label>
                   </li>
                   <li>
@@ -531,7 +537,7 @@
                 </ul>
       </div>
       <div class="pre-subscribe-container vertical-container">
-        <p>подпишитесь</p>
+        <p>Подпишитесь на рассылку</p>
         <form>
           <label class="subscribe-container">
             <input class="subscribe-input" type="email" placeholder="Email">
