--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                   <li>
                     <label class="modal-label">
                       <p>Комментарий</p>
-                      <textarea class="modal-input modal-comment" placeholder="Введите текст"></textarea>
+                      <span>
+                        <textarea class="modal-input modal-comment" placeholder="Введите текст"></textarea> 
+                      </span>
                     </label>
                   </li>
                 </ul>
