--- a/portfolio.html
+++ b/portfolio.html
@@ -307,7 +307,7 @@
                 </ul>
       </div>
       <div class="pre-subscribe-container vertical-container">
-        <p>подпишитесь</p>
+        <p>Подпишитесь на рассылку</p>
         <form>
           <label class="subscribe-container">
             <input class="subscribe-input" type="email" placeholder="Email">
